# FallingSandEngine

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  package.sh  rustfmt.toml  setup.txt
.github/workflows/: autobuild.yml
assets/data/shaders/: liquid.frag
benches/: benchmark.rs
chunksystem/: Cargo.toml
chunksystem/src/: lib.rs
fs_client/: Cargo.toml
fs_client/src/: client.rs  game.rs
fs_client/src/input/: controls.rs
fs_client/src/render/: drawing.rs  egui.rs  imgui.rs  mod.rs  renderer.rs  rigidbody.rs  shaders.rs  vertex.rs
fs_client/src/ui/: asset_packs.rs  clipboard.rs  draw.rs  main_menu.rs  mod.rs  mods.rs  registries.rs
fs_client/src/world/: chunk.rs  client_world.rs  mod.rs  world_renderer.rs
fs_client/src/world/chunk_data/: mod.rs
fs_client/src/world/chunk_data/tile_entity/: mod.rs
fs_common/: Cargo.toml
fs_common/src/: lib.rs
fs_common/src/game/: game.rs  mod.rs
fs_common/src/game/client/: client.rs  game.rs  mod.rs
fs_common/src/game/client/input/: controls.rs  mod.rs
fs_common/src/game/client/render/: mod.rs  renderer.rs
fs_common/src/game/client/ui/: main_menu.rs
fs_common/src/game/client/world/: chunk.rs  client_world.rs  mod.rs  world_renderer.rs
fs_common/src/game/common/: asset_pack.rs  cli.rs  commands.rs  dir_or_zip.rs  file_helper.rs  hashmap_ext.rs  mod.rs  registries.rs  registry.rs  settings.rs
fs_common/src/game/common/modding/: manager.rs  mod.rs
fs_common/src/game/common/modding/api/: render.rs
fs_common/src/game/common/networking/: mod.rs
fs_common/src/game/common/world/: chunk.rs  chunk_access.rs  chunk_data.rs  chunk_handler.rs  chunk_index.rs  copy_paste.rs  ecs.rs  material.rs  mesh.rs  mod.rs  particle.rs  physics.rs  rigidbody.rs  simulator.rs  world.rs  world_loading.rs
fs_common/src/game/common/world/entity/: mod.rs  player.rs
fs_common/src/game/common/world/material/: buf.rs  color.rs  mod.rs  registry.rs
fs_common/src/game/common/world/material/placer/: lit.rs  lit_colored.rs  mod.rs  textured.rs
fs_common/src/game/common/world/tile_entity/: mod.rs
fs_common/src/game/server/: game.rs
fs_common/src/game/server/world/: mod.rs
fs_common_types/: Cargo.toml
fs_common_types/src/: chunk.rs  lib.rs
fs_common_types/src/modding/: mod.rs
fs_main/: Cargo.toml
fs_main/src/: build.rs  main.rs
fs_mod_common/: Cargo.toml
fs_mod_common/src/: rect.rs
fs_mod_common/src/modding/: mod.rs  render.rs
fs_mod_helper/: Cargo.toml
fs_mod_helper/src/: bindings.rs  draw.rs
fs_mod_sdk/: Cargo.toml
fs_mod_sdk/src/: bindings.rs  draw.rs  lib.rs  util.rs
fs_mod_sdk_macros/: Cargo.toml
fs_mod_sdk_macros/src/: lib.rs
fs_modding_api/: Cargo.toml
fs_modding_api/src/: bindings.rs  lib.rs  logging.rs
fs_modding_api_macros/: Cargo.toml
fs_modding_api_macros/src/: lib.rs
fs_server/: Cargo.toml
fs_server/src/: game.rs  lib.rs
fs_server/src/world/: chunk.rs  mod.rs
gamedir/asset_packs/: test_pack.zip.disabled
gamedir/asset_packs/test_pack/: pack.ron
gamedir/asset_packs/test_pack/data/shaders/: chunk.frag
gamedir/asset_packs/test_pack/data/structure/piece/yellow_thing/: yellow_thing.ase
gamedir/assets/data/shaders/: chunk.frag  chunk.vert  chunk_light.frag  chunk_lighting.frag  chunk_lighting.vert  common.frag  common.vert  lighting_prep.comp  lighting_propagate.comp  particles.frag  particles.vert  texture_array.frag  texture_array.vert  textured.frag  textured.vert  vert_colors.frag  vert_colors.vert
gamedir/assets/data/structure/piece/corner/: corner.ase
gamedir/assets/data/structure/piece/torch/: torch.ase  torch2.ase
gamedir/assets/data/structure/piece/yellow_thing/: yellow_thing.ase
gamedir/assets/data/structure/pool/: end_pieces.ron  hallways.ron  rooms.ron  rooms_or_straight_hallways.ron  torch.ron  yellow_thing.ron
gamedir/assets/data/structure/set/: test_structure_set.ron
gamedir/assets/data/structure/template/stairs/: stairs.ase
gamedir/assets/data/tile_entity/test/: test.ase
gamedir/saves/template/: world_info.toml
src/: build.rs  lib.rs  main.rs
src/game/: game.rs  mod.rs  renderer.rs  settings.rs
src/game/client/: client.rs  game.rs  mod.rs
src/game/client/input/: controls.rs  mod.rs
src/game/client/render/: imgui.rs  mod.rs  renderer.rs
src/game/client/ui/: main_menu.rs  mod.rs
src/game/client/world/: chunk.rs  client_world.rs  mod.rs  world.rs  world_renderer.rs
src/game/common/: commands.rs  file_helper.rs  mod.rs  settings.rs
src/game/common/networking/: mod.rs
src/game/common/world/: chunk.rs  ecs.rs  material.rs  mesh.rs  mod.rs  particle.rs  physics.rs  rigidbody.rs  simulator.rs  world.rs  world_loading.rs
src/game/common/world/entity/: mod.rs  player.rs
src/game/server/: game.rs  mod.rs
src/game/server/world/: chunk.rs  mod.rs
src/game/world/: chunk.rs  material.rs  mod.rs  simulator.rs  world.rs
test_mod/: Cargo.toml
test_mod/src/: lib.rs
