[package]
name = "falling_sand_engine"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
profiling = "1.0"
rand = "0.8"
simdnoise = "3.1"
futures = { version = "0.3", features = [] }
tokio = {version = "1.11", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.4"
imgui = "0.7"
imgui-sdl2 = "0.14"
imgui-opengl-renderer = "0.11"
sysinfo = "0.20" # TODO: should be optional in the future
liquidfun = { git = "https://github.com/PieKing1215/custom-liquidfun-rust" }
sdl_gpu = { git = "https://github.com/PieKing1215/sdl-gpu-rust" }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3"
bincode = "1.3"
toml = "0.5"
# serde_json = "1.0"
clap = "2.33"
crossterm = "0.21"
log = "0.4"
simplelog = "0.10"
tui-logger = "0.6"
backtrace = "0.3"
specs = { version = "0.17", features = ["serde", "specs-derive"] }
specs-derive = "0.4"
bitflags = "1.3"
rustc-hash = "1.1.0"

# mesh generation
contour = "0.4"
geojson = "0.22"
ramer_douglas_peucker = "0.2"
mint = "0.5"
earcutr = "0.2"

[features]
#default = ["profile-with-tracy"]
profile = ["profiling/profile-with-tracy"]

[dependencies.tui]
version = "0.16"
default-features = false
features = ["crossterm"]

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","gfx","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx", "sdl2-image[libjpeg-turbo,libwebp]", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
branch = "master"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[profile.dev]
opt-level = 1

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
chrono = "0.4"

# [[bench]]
# name = "benchmark"
# harness = false