[workspace]

members = [
    "fs_main",
    "fs_common",
    "fs_client",
    "fs_server",
    "chunksystem",
    "fs_common_types",
    "fs_modding_api",
    "fs_modding_api_macros",
    "test_mod",
]

[profile.dev]
opt-level = 1

[profile.release]
incremental = true

[profile.release-lto]
inherits = "release"
incremental = false
lto = true