[package]
name = "fs_client"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine client"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_common = { path = "../fs_common" }
log = "0.4"
profiling = "1.0"
clap = { version = "3.0", features = ["cargo"] }
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git" }
imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs.git" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs.git" }
specs = { version = "0.17", features = ["serde", "specs-derive"] }
salva2d = { version = "0.7", features = ["rapier"] }
rapier2d = { version = "0.11", features = ["simd-stable"] }
sysinfo = "0.23" # TODO: should be optional in the future
bincode = "1.3"
glutin = "0.28"
glium = "0.31"
glium-glyph = { git = "https://github.com/est31/glium-glyph.git" }
nalgebra = "0.30"
nalgebra-glm = "0.16"
