[package]
name = "fs_client"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine client"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"

[dependencies]
fs_common = { path = "../fs_common" }
log = "0.4"
profiling = "1.0"
clap = { version = "4.1", features = ["cargo"] }
egui = { version = "0.20", default-features = false, features = ["default_fonts"] }
egui_glium = { version = "0.20", default-features = false, features = [] }
specs = { version = "0.18", features = ["serde", "specs-derive"] }
# salva2d = { version = "0.7", features = ["rapier"] }
rapier2d = { version = "0.17", features = ["simd-stable"] }
sysinfo = "0.27"
bincode = "1.3"
glutin = "0.29"
glium = "0.32"
glium-glyph = "0.14"
nalgebra = { version = "0.32", default-features = false, features = [] }
nalgebra-glm = "0.18"
