[package]
name = "fs_common"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine common"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
profiling = "1.0"
rand = "0.8"
simdnoise = "3.1"
futures = { version = "0.3", features = [] }
lazy_static = "1.4"
glutin = "0.28"
glium = "0.31"
glium-glyph = "0.11"
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git" }
sysinfo = "0.23" # TODO: should be optional in the future
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3"
bincode = "1.3"
toml = "0.5"
# serde_json = "1.0"
clap = { version = "3.0", features = ["cargo"] }
crossterm = "0.23"
log = "0.4"
tui = { version = "0.17", default-features = false, features = ["crossterm"] }
tui-logger = "0.7"
specs = { version = "0.17", features = ["serde", "specs-derive"] }
specs-derive = "0.4"
bitflags = "1.3"
fastrand = "1.6.0"
drain_filter_polyfill = "0.1"
retain_mut = "0.1"
salva2d = { version = "0.7", features = ["rapier"] }
rapier2d = { version = "0.11", features = ["simd-stable"] }
rayon = "1.5"
itertools = "0.10"
async-scoped = { version = "0.7", features = ["use-tokio"] }

# mesh generation
contour = "0.4"
geojson = "0.22"
ramer_douglas_peucker = "0.2"
mint = "0.5"
earcutr = "0.2"

[features]
#default = ["profile-with-tracy"]
profile = ["profiling/profile-with-tracy"]

[dev-dependencies]
criterion = "0.3"

# [[bench]]
# name = "benchmark"
# harness = false