[package]
name = "fs_common"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine common"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"

[dependencies]
profiling = "1.0"
rand = "0.8"
simdnoise = "3.1"
lazy_static = "1.4"
glium = "0.31"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.5"
# serde_json = "1.0"
clap = { version = "3.0", features = ["cargo"] }
log = "0.4"
specs = { version = "0.17", features = ["serde", "specs-derive"] }
specs-derive = "0.4"
bitflags = "1.3"
fastrand = "1.6.0"
drain_filter_polyfill = "0.1"
retain_mut = "0.1"
salva2d = { version = "0.7", features = ["rapier"] }
rapier2d = { version = "0.11", features = ["simd-stable"] }
rayon = "1.5"
itertools = "0.10"
parking_lot = "0.12"

# mesh generation
contour = "0.4"
geojson = "0.22"
ramer_douglas_peucker = "0.2"
mint = "0.5"
earcutr = "0.2"

[features]
profile = ["profiling/profile-with-tracy"]
