[package]
name = "fs_common"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine common"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"

[dependencies]
chunksystem = { path = "../chunksystem" }
fs_mod_common = { path = "../fs_mod_common" }
profiling = "1.0"
rand = "0.8"
simdnoise = "3.1"
lazy_static = "1.4"
glium = "0.32"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
toml = "0.7"
# serde_json = "1.0"
clap = { version = "4.1", features = ["cargo", "derive"] }
log = "0.4"
specs = { version = "0.18", features = ["serde", "specs-derive"] }
specs-derive = "0.4"
bitflags = "1.3"
fastrand = "1.7"
drain_filter_polyfill = "0.1"
# salva2d = { version = "0.7", features = ["rapier"] }
rapier2d = { version = "0.17", features = ["simd-stable"] }
rayon = "1.5"
itertools = "0.10"
image = { version = "0.24", default_features = false, features = ["png"] }
akin = "0.4"
bracket-noise = "0.8"
futures = "0.3"
ahash = "0.8"
asefile = "0.3"
once_cell = "1.17"
ron = "0.8"
static_assertions = "1.1"
wasm_plugin_host = { git = "https://github.com/PieKing1215/wasm_plugin.git", branch = "wasmer3", default-features = false, features = ["serialize_bincode"] }
thiserror = "1"
zip = "0.6"

# mesh generation
contour = "0.7"
geojson = "0.24"
ramer_douglas_peucker = "0.2"
mint = "0.5"
earcutr = "0.4"

[features]
profile = ["profiling/profile-with-tracy"]
