[package]
name = "fs_common_types"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine common types"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"

[dependencies]
derive-getters = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
