[package]
name = "fs_main"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine main"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"
build = "src/build.rs"

[dependencies]
fs_common = { path = "../fs_common" }
fs_client = { path = "../fs_client" }
fs_server = { path = "../fs_server" }
clap = { version = "3.0", features = ["cargo"] }
profiling = "1.0"
log = "0.4"
crossterm = "0.23"
simplelog = "0.11"
tui = { version = "0.17", default-features = false, features = ["crossterm"] }
tui-logger = "0.7"
backtrace = "0.3"
rapier2d = { version = "0.11", features = ["simd-stable"] }
salva2d = { version = "0.7", features = ["rapier"] }
specs = { version = "0.17", features = ["serde", "specs-derive"] }
num_cpus = "1.13"
glutin = "0.28"
glium = "0.31"

[build-dependencies]
chrono = "0.4"

[features]
profile = ["fs_common/profile"]