[package]
name = "fs_mod_sdk"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine mod helper"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"

[dependencies]
fs_mod_sdk_macros = { path = "../fs_mod_sdk_macros" }
fs_mod_common = { path = "../fs_mod_common" }
wasm_plugin_guest = { git = "https://github.com/PieKing1215/wasm_plugin.git", branch = "wasmer3", default-features = false, features = ["serialize_bincode"] }
once_cell = { version = "1", default-features = false }
static_assertions = "1.1"
log = "0.4"
backtrace = "0.3"
