[package]
name = "fs_mod_sdk_macros"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine mod helper"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games", "macro"]
edition = "2021"

[lib]
proc_macro = true

[dependencies]
syn = "1.0"
quote = "1.0"