[package]
name = "fs_server"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine server"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_common = { path = "../fs_common" }
profiling = "1.0"
clap = { version = "3.0", features = ["cargo"] }
log = "0.4"
crossterm = "0.23"
tui = { version = "0.17", default-features = false, features = ["crossterm"] }
tui-logger = "0.7"
bincode = "1.3"
sdl2 = { version = "0.35", default-features = false, features = ["ttf","image","gfx","static-link","use-vcpkg"] }
specs = { version = "0.17", features = ["serde", "specs-derive"] }

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx", "sdl2-image[libjpeg-turbo,libwebp]", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
branch = "master"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }