[package]
name = "fs_server"
version = "0.1.0"
authors = ["PieKing1215"]
description = "Falling Sand Engine server"
repository = "https://github.com/PieKing1215/FallingSandEngine"
readme = "README.md"
license = "ARR"
keywords = ["game", "falling-sand", "2d"]
categories = ["game-engines", "games"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_common = { path = "../fs_common" }
profiling = "1.0"
clap = { version = "4.1", features = ["cargo"] }
log = "0.4"
crossterm = "0.25"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
tui-logger = "0.8"
bincode = "1.3"
specs = { version = "0.18", features = ["serde", "specs-derive"] }
